# frontend

./: .env  .eslintrc.json  .gitignore  .gitkeep  .gitmodules  .prettierrc  ABOUT_URLS.md  AUTHORS.txt  Android.mk  CONTRIBUTING.md  CREDITS.txt  Dockerfile  Dockerfile.openorchid  Makefile  NOTICE.md  README.md  SECRETS.md  SOUND_EFFECTS.md  TODO.md  build.gradle  build.release.json  index.js  meson.build  openbuild  openbuild.bat  openbuild.ps1  orchid_app.json  package-lock.json  package.json  preload.js  settings.gradle  webpack.dev.js  webpack.prod.js
boot/: README.md
browser/: browser.css  browser.js  browser2.css  contextmenu.css  index.html
chrome/: chrome.css  chrome.js  contextmenu.js  index.html  main.css  main.js  titlebar.css
contrib/: increment_version.js
customization/: device_config.json  devicecompatibility.json
customize/: definitions.css  devicecompatibility.json  permissions.json  search-engines.json  settings.json
defaults/: environment.json  settings.json
docs/: app_manager.md  bluetooth.md  game-episode1.md  settings.md  storage.md  telephony.md
internal/: customize.html  net_error.html  preload.js  readermode.html  settings.html
kernel/: build.sh
libs/: lwjgl-release-all-zip.json
locales/: ar.json  en.json  fr.json  zh.json
modules/: chrome.js  openorchid_ui.js
native/: Makefile  README.md  compositor.c  dependencies.txt
scripts/: install  node_packages.sh  prepare.ps1  translate_ftls.ps1  translate_ftls.sh  translate_manifests.ps1  translate_manifests.sh
src/: api.js  app_runtime.js  chrome.js  default_presets.js  (+11 more)
(+3484 files in other folders)
